--- a/src/app/ville/ville.component.html
+++ b/src/app/ville/ville.component.html
@@ -38,4 +38,33 @@
      
         </tbody>
       </table>
+      <button (click)="updateVille()" class="btn btn-primary">Mettre a jour</button>
+
+
+      <!-- Ajout -->
+      <div class="modal fade" id="addVilleForm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ajouter une ville</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="" method="post" (submit)="addVille()">
+                <div class="col">
+                  <label for="nom_ville" class="form-label">Nom de la ville :</label>
+                  <input type="text" class="form-control" name="nom" id="nom_ville" [(ngModel)]="ville.nom" placeholder="Entrez votre nom de ville" aria-label="Entrez votre nom de ville">
+                </div>
+                <div class="col">
+                  <label for="cp" class="form-label">Code postal :</label>
+                  <input type="text" class="form-control" name="cp" id="cp" [(ngModel)]="ville.codePostal" placeholder="Entrez votre code postal" aria-label="Entrez votre code postal">
+                </div>
+                <div class="col-2">
+                  <button type="submit" class="btn btn-primary" id="envoyer_add_edit">Envoyer</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
 </main>
