--- a/src/app/ville/ville.component.html
+++ b/src/app/ville/ville.component.html
@@ -30,7 +30,7 @@
                 Update
               </button>
     
-            <button class="btn btn-danger" id="delete">
+            <button class="btn btn-danger" (click)="deleteVilleOnClick(ville.id)" id="delete">
               <a>Delete</a>
             </button>
           </td>
