add search method & rdv

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -3,19 +3,19 @@
         <div class="container-fluid">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/">Dashboard</a>
+                    <a class="nav-link active" routerLink="/">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/patient">Patients</a>
+                    <a class="nav-link" [routerLink]="['patient']">Patients</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/rdv">Rendez-vous</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/ville">Villes</a>
+                    <a class="nav-link" [routerLink]="['ville']">Villes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user">Utilisateurs</a>
+                    <a class="nav-link" routerLink="/user">Utilisateurs</a>
                 </li>
             </ul>
             <div class="float-end">
