relace a to routerlink for rdv

--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -9,7 +9,7 @@
                     <a class="nav-link" [routerLink]="['patient']">Patients</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/rdv">Rendez-vous</a>
+                    <a class="nav-link" aria-current="page"[routerLink]="['rdv']">Rendez-vous</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['ville']">Villes</a>
